# Gobang2

./: CMakeLists.txt  EasyX.cpp  EasyX.h  Gobang.cpp  Gobang.h  Play.cpp  Play.h  README.md  Zobrist.cpp  Zobrist.h  main.cpp
.github/workflows/: codeql-analysis.yml
lib/: VsGraphicsHelper.lib
